--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_uri=mongodb+srv://admin:ui58oqbsKL7nRn24@vocangel.623jr.mongodb.net/users?retryWrites=true&w=majority
+MONGO_uri=mongodb+srv://admin:admin@vocangel.623jr.mongodb.net/users?retryWrites=true&w=majority
