--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGO_uri=mongodb+srv://admin:admin@vocangel.623jr.mongodb.net/users?retryWrites=true&w=majority
+APP_URL=http://localhost:3000
